nodejs-mini-message-board/devops/nodejs-mini-message-board-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-mini-message-board-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: nodejs-mini-message-board.odin.thecodedom.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nodejs-mini-message-board-service
                port:
                  number: 3000
  tls:
    - hosts:
        - nodejs-mini-message-board.odin.thecodedom.com
      secretName: nodejs-mini-message-board-tls
